--- a/raah/website/templates/base.html
+++ b/raah/website/templates/base.html
@@ -139,11 +139,6 @@
                     }
                 } */
 
-
-
-
-
-
     </style>
     <script>
         let user = "{{request.user}}"
@@ -163,11 +158,6 @@
         return cookieValue;
     }
     const csrftoken = getCookie('csrftoken');
-
-
-
-
-
 
     </script>
 </head>
@@ -244,18 +234,18 @@
                         </div>
 
                         <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-                             data-notify="2"
+                             data-notify="{{cart.get_itemtotal}}"
                         >
                             <i class="zmdi zmdi-shopping-cart"></i>
                         </div>
 
-                        <a
-                                href="#"
-                                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                                data-notify="0"
-                        >
-                            <i class="zmdi zmdi-favorite-outline"></i>
-                        </a>
+                        <!--                        <a-->
+                        <!--                                href="#"-->
+                        <!--                                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"-->
+                        <!--                                data-notify="0"-->
+                        <!--                        >-->
+                        <!--                            <i class="zmdi zmdi-favorite-outline"></i>-->
+                        <!--                        </a>-->
                         {% if user.is_authenticated %}
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
@@ -305,18 +295,10 @@
 
             <div
                     class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"
-                    data-notify="2"
+                    data-notify="{{cart.get_itemtotal}}"
             >
                 <i class="zmdi zmdi-shopping-cart"></i>
             </div>
-
-            <a
-                    href="#"
-                    class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
-                    data-notify="0"
-            >
-                <i class="zmdi zmdi-favorite-outline"></i>
-            </a>
         </div>
 
         <!-- Button show menu -->
@@ -420,9 +402,10 @@
 
         <div class="header-cart-content flex-w js-pscroll">
             <ul class="header-cart-wrapitem w-full">
+                {% for item in cartitems %}
                 <li class="header-cart-item flex-w flex-t m-b-12">
-                    <div class="header-cart-item-img">
-                        <img src="{% static 'website/images/product32.jpg' %}" alt="IMG"/>
+                    <div class="header-cart-item-img delete-cart-item">
+                        <img src="{{item.product.image.url}}" alt="IMG"/>
                     </div>
 
                     <div class="header-cart-item-txt p-t-8">
@@ -430,50 +413,50 @@
                                 href="#"
                                 class="header-cart-item-name m-b-18 hov-cl1 trans-04"
                         >
-                            Mandala t-shirt
+                            {{item.product.product_name}}
                         </a>
 
-                        <span class="header-cart-item-info"> 1 x Rs 500 </span>
+                        <span class="header-cart-item-info"> {{item.quantity}} x {{item.product.price}}</span>
                     </div>
                 </li>
+                {% endfor %}
+                <!--                <li class="header-cart-item flex-w flex-t m-b-12">-->
+                <!--                    <div class="header-cart-item-img">-->
+                <!--                        <img src="{% static 'website/images/product9.jpg' %}" alt="IMG"/>-->
+                <!--                    </div>-->
 
-                <li class="header-cart-item flex-w flex-t m-b-12">
-                    <div class="header-cart-item-img">
-                        <img src="{% static 'website/images/product9.jpg' %}" alt="IMG"/>
-                    </div>
+                <!--                    <div class="header-cart-item-txt p-t-8">-->
+                <!--                        <a-->
+                <!--                                href="#"-->
+                <!--                                class="header-cart-item-name m-b-18 hov-cl1 trans-04"-->
+                <!--                        >-->
+                <!--                            Happy anniversary cushion-->
+                <!--                        </a>-->
 
-                    <div class="header-cart-item-txt p-t-8">
+                <!--                        <span class="header-cart-item-info"> 1 x Rs. 450</span>-->
+                <!--                    </div>-->
+                <!--                </li>-->
+                <!--            </ul>-->
+
+                <div class="w-full">
+                    <div class="header-cart-total w-full p-tb-40">Total: Rs. {{cart.get_cart_total}}</div>
+
+                    <div class="header-cart-buttons flex-w w-full">
                         <a
-                                href="#"
-                                class="header-cart-item-name m-b-18 hov-cl1 trans-04"
+                                href="{% url 'cart' %}"
+                                class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10"
                         >
-                            Happy anniversary cushion
+                            View Cart
                         </a>
 
-                        <span class="header-cart-item-info"> 1 x Rs. 450</span>
+                        <a
+                                href="{% url 'cart' %}"
+                                class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10"
+                        >
+                            Check Out
+                        </a>
                     </div>
-                </li>
-            </ul>
-
-            <div class="w-full">
-                <div class="header-cart-total w-full p-tb-40">Total: ${{cart.get_cart_total}}</div>
-
-                <div class="header-cart-buttons flex-w w-full">
-                    <a
-                            href="{% url 'cart' %}"
-                            class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10"
-                    >
-                        View Cart
-                    </a>
-
-                    <a
-                            href="{% url 'cart' %}"
-                            class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10"
-                    >
-                        Check Out
-                    </a>
                 </div>
-            </div>
         </div>
     </div>
 </div>
@@ -860,6 +843,7 @@
     $('.cart').click(function(){
         console.log('clicked')
     });
+
 
 </script>
 {% endblock %}
