--- a/raah/website/templates/cart.html
+++ b/raah/website/templates/cart.html
@@ -2,213 +2,214 @@
 {% load static %}
 
 {% block content %}
+<section class="bg0 p-b-140">
+    <!-- breadcrumb -->
+    <div class="container bg-white">
+        <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-25 p-b-25 p-lr-0-lg">
+            <a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+                Home
+                <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+            </a>
 
-<!-- breadcrumb -->
-<div class="container" style="background-color: white;">
-    <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-        <a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
-            Home
-            <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
-        </a>
-
-        <span class="stext-109 cl4">
-				Shoping Cart
+            <span class="stext-109 cl4">
+				Shopping Cart
 			</span>
+        </div>
     </div>
-</div>
 
 
-<!-- Shoping Cart -->
-{% for item in cartitems %}
-<form class="bg0 p-t-75 p-b-85">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
-                <div class="m-l-25 m-r--38 m-lr-0-xl">
-                    <div class="wrap-table-shopping-cart">
-                        <table class="table-shopping-cart">
-                            <tr class="table_head">
-                                <th class="column-1">Product</th>
-                                <th class="column-2"></th>
-                                <th class="column-3">Price</th>
-                                <th class="column-4">Quantity</th>
-                                <th class="column-5">Total</th>
-                            </tr>
-
-                            <tr class="table_row">
-                                <td class="column-1">
-                                    <div class="how-itemcart1">
-                                        <img src="{% static 'website/images/product32.jpg' %}" alt="IMG">
-                                    </div>
-                                </td>
-                                <td class="column-2">{{item.product_name}}</td>
-                                <td class="column-3">Rs. {{item.price}}</td>
-                                <td class="column-4">
-                                    <div class="wrap-num-product flex-w m-l-auto m-r-0 quantity">
-                                        <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-                                            <i class="fs-16 zmdi zmdi-minus"></i>
+    <!-- Shopping Cart -->
+    <form class="bg0 p-t-45 p-b-85" method="post" action="/checkout">{% csrf_token %}
+        <input type="hidden" name="cartId" id="cartId" value="{{cart.id}}">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
+                    <div class="m-l-25 m-r--38 m-lr-0-xl">
+                        <div class="wrap-table-shopping-cart">
+                            <table class="table-shopping-cart">
+                                <tr class="table_head">
+                                    <th class="column-1">Product</th>
+                                    <th class="column-2"></th>
+                                    <th class="column-3">Price</th>
+                                    <th class="column-4">Quantity</th>
+                                    <th class="column-5">Total</th>
+                                </tr>
+                                {% for item in cartitems %}
+                                <tr class="table_row">
+                                    <td class="column-1">
+                                        <div class="how-itemcart1 delete-cart-item">
+                                            <img src="{{item.product.image.url}}" alt="IMG"/>
                                         </div>
+                                    </td>
+                                    <td class="column-2"> {{item.product.product_name}}</td>
+                                    <td class="column-3">Rs. {{item.product.price}}</td>
+                                    <td class="column-4 ">{{item.quantity}}</td>
+<!--                                        <div class="wrap-num-product flex-w m-l-auto m-r-0 quantity">-->
+<!--                                            <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">-->
+<!--                                                <i class="fs-16 zmdi zmdi-minus"></i>-->
+<!--                                            </div>-->
 
-                                        <input class="mtext-104 cl3 txt-center num-product" type="number"
-                                               name="num-product1" value="1">
+<!--                                            <input class="mtext-104 cl3 txt-center num-product quantity" type="number"-->
+<!--                                                   id="num_product_{{product.reference_id}}"-->
+<!--                                                   name="num-product1" value="{{item.quantity}}">-->
 
-                                        <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-                                            <i class="fs-16 zmdi zmdi-plus"></i>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="column-5">Rs. {{item.get_total}}</td>
-                            </tr>
+<!--                                            <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">-->
+<!--                                                <i class="fs-16 zmdi zmdi-plus"></i>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+                                    <td class="column-5">Rs. {{item.get_total}}</td>
+                                </tr>
+                                {% endfor %}
 
-                            <!--								<tr class="table_row">-->
-                            <!--									<td class="column-1">-->
-                            <!--										<div class="how-itemcart1">-->
-                            <!--											<img src="{% static 'website/images/product9.jpg' %}" alt="IMG">-->
-                            <!--										</div>-->
-                            <!--									</td>-->
-                            <!--									<td class="column-2">Happy anniversary cushion</td>-->
-                            <!--									<td class="column-3">Rs. 450</td>-->
-                            <!--									<td class="column-4">-->
-                            <!--										<div class="wrap-num-product flex-w m-l-auto m-r-0">-->
-                            <!--											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">-->
-                            <!--												<i class="fs-16 zmdi zmdi-minus"></i>-->
-                            <!--											</div>-->
+                                <!--								<tr class="table_row">-->
+                                <!--									<td class="column-1">-->
+                                <!--										<div class="how-itemcart1">-->
+                                <!--											<img src="{% static 'website/images/product9.jpg' %}" alt="IMG">-->
+                                <!--										</div>-->
+                                <!--									</td>-->
+                                <!--									<td class="column-2">Happy anniversary cushion</td>-->
+                                <!--									<td class="column-3">Rs. 450</td>-->
+                                <!--									<td class="column-4">-->
+                                <!--										<div class="wrap-num-product flex-w m-l-auto m-r-0">-->
+                                <!--											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">-->
+                                <!--												<i class="fs-16 zmdi zmdi-minus"></i>-->
+                                <!--											</div>-->
 
-                            <!--											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product2" value="1">-->
+                                <!--											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product2" value="1">-->
 
-                            <!--											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">-->
-                            <!--												<i class="fs-16 zmdi zmdi-plus"></i>-->
-                            <!--											</div>-->
-                            <!--										</div>-->
-                            <!--									</td>-->
-                            <!--									<td class="column-5">Rs. 450</td>-->
-                            <!--								</tr>-->
-                        </table>
-                    </div>
-
-                    <div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-                        <div class="flex-w flex-m m-r-20 m-tb-5">
-                            <!--								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">-->
-
-                            <!--								<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">-->
-                            <!--									Apply coupon-->
-                            <!--								</div>-->
+                                <!--											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">-->
+                                <!--												<i class="fs-16 zmdi zmdi-plus"></i>-->
+                                <!--											</div>-->
+                                <!--										</div>-->
+                                <!--									</td>-->
+                                <!--									<td class="column-5">Rs. 450</td>-->
+                                <!--								</tr>-->
+                            </table>
                         </div>
 
-                        <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-                            Update Cart
+                        <div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
+                            <div class="flex-w flex-m m-r-20 m-tb-5">
+                                <!--								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">-->
+
+                                <!--								<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">-->
+                                <!--									Apply coupon-->
+                                <!--								</div>-->
+                            </div>
+                            <a
+                                    href="{% url 'cart' %}">
+                                <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
+                                    Update Cart
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
-                <div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
-                    <h4 class="mtext-109 cl2 p-b-30">
-                        Cart Totals
-                    </h4>
+                <div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
+                    <div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
+                        <h4 class="mtext-109 cl2 p-b-30">
+                            Cart Totals
+                        </h4>
 
-                    <div class="flex-w flex-t bor12 p-b-13">
-                        <div class="size-208">
+                        <div class="flex-w flex-t bor12 p-b-13">
+                            <div class="size-208">
 								<span class="stext-110 cl2">
 									Subtotal:
 								</span>
-                        </div>
+                            </div>
 
-                        <div class="size-209">
+                            <div class="size-209">
 								<span class="mtext-110 cl2">
-									Rs. 950
+									Rs. {{cart.get_cart_total}}
 								</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="flex-w flex-t bor12 p-t-15 p-b-30">
-                        <div class="size-208 w-full-ssm">
+                        <div class="flex-w flex-t bor12 p-t-15 p-b-30">
+                            <div class="size-208 w-full-ssm">
 								<span class="stext-110 cl2">
 									Shipping:
 								</span>
-                        </div>
+                            </div>
 
-                        <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-                            <p class="stext-111 cl6 p-t-2">
-                                There are no shipping methods available. Please double check your address, or contact us
-                                if you need any help.
-                            </p>
+                            <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
+                                <p class="stext-111 cl6 p-t-2">
+                                    There is only one shipping method available. Please double check your address, or
+                                    contact us
+                                    if you need any help.
+                                </p>
 
-                            <div class="p-t-15">
+                                <div class="p-t-15">
 									<span class="stext-112 cl8">
 										Calculate Shipping
 									</span>
 
-                                <div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
-                                    <div class="dropDownSelect2"></div>
+                                    <div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
+                                        <select class="js-select2" name="time">
+                                            <option disabled selected>Payment method...</option>
+                                            <option>Cash on delivery</option>
+                                        </select>
+                                        <div class="dropDownSelect2"></div>
+                                    </div>
+
+                                    <div class="bor8 bg0 m-b-12">
+                                        <input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="address"
+                                               id="address"
+                                               placeholder="Address" required>
+                                    </div>
+
+                                    <div class="bor8 bg0 m-b-22">
+                                        <input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="phone"
+                                               id="phone"
+                                               placeholder="Mobile Number" required>
+                                    </div>
+
+                                    <!--									<div class="flex-w">-->
+                                    <!--&lt;!&ndash;										<div class="flex-c-m stext-101 cl2 size-115 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer">&ndash;&gt;-->
+                                    <!--&lt;!&ndash;											Update Totals&ndash;&gt;-->
+                                    <!--&lt;!&ndash;										</div>&ndash;&gt;-->
+                                    <!--									</div>-->
+
                                 </div>
-
-                                <div class="bor8 bg0 m-b-12">
-                                    <input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="state"
-                                           placeholder="Address">
-                                </div>
-
-                                <div class="bor8 bg0 m-b-22">
-                                    <input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="postcode"
-                                           placeholder="Mobile Number">
-                                </div>
-
-                                <!--									<div class="flex-w">-->
-                                <!--&lt;!&ndash;										<div class="flex-c-m stext-101 cl2 size-115 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer">&ndash;&gt;-->
-                                <!--&lt;!&ndash;											Update Totals&ndash;&gt;-->
-                                <!--&lt;!&ndash;										</div>&ndash;&gt;-->
-                                <!--									</div>-->
-
                             </div>
                         </div>
-                    </div>
 
-                    <div class="flex-w flex-t p-t-27 p-b-33">
-                        <div class="size-208">
+                        <div class="flex-w flex-t p-t-27 p-b-33">
+                            <div class="size-208">
 								<span class="mtext-101 cl2">
 									Total:
 								</span>
-                        </div>
+                            </div>
 
-                        <div class="size-209 p-t-1">
+                            <div class="size-209 p-t-1">
 								<span class="mtext-110 cl2">
-									Rs. 950
+									Rs. {{cart.get_cart_total}}
 								</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
-                        Proceed to Checkout
-                    </button>
+                        <button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+                            Buy Now
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</form>
-{% endfor %}
-
+    </form>
+</section>
 <!--===============================================================================================-->
-<script src="{% static 'website/vendor/MagnificPopup/jquery.magnific-popup.min.js' %}"></script>
-<!--===============================================================================================-->
-<script src="{% static 'website/vendor/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
-<script>
-		$('.js-pscroll').each(function(){
-			$(this).css('position','relative');
-			$(this).css('overflow','hidden');
-			var ps = new PerfectScrollbar(this, {
-				wheelSpeed: 1,
-				scrollingThreshold: 1000,
-				wheelPropagation: false,
-			});
-
-			$(window).on('resize', function(){
-				ps.update();
-			})
-		});
+<script src="{% static 'website/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<!--==============================================================================================-->
+<script type="text/javascript">
+    $(document).ready(function () {
+        {% if thank %}
+            alert('Thanks for your order. Your order id is {{id}})
+            localStorage.clear()
+            document.location = "/index"
+        {% endif %}
+    });
 
 </script>
-<!--===============================================================================================-->
-<script src="{% static 'website/js/main.js' %}"></script>
 
 <{% endblock %}
+
