--- a/raah/website/templates/product.html
+++ b/raah/website/templates/product.html
@@ -34,11 +34,11 @@
             </div>
 
             <div class="flex-w flex-c-m m-tb-10">
-<!--                <div class="flex-c-m stext-106 cl6 size-104 bor4 pointer  trans-04 m-r-8 m-tb-4 ">-->
-<!--&lt;!&ndash;                    <i class="icon-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-filter-list"></i>&ndash;&gt;-->
-<!--&lt;!&ndash;                    <i class="icon-close-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>&ndash;&gt;-->
-<!--&lt;!&ndash;                    Filter&ndash;&gt;-->
-<!--                </div>-->
+                <!--                <div class="flex-c-m stext-106 cl6 size-104 bor4 pointer  trans-04 m-r-8 m-tb-4 ">-->
+                <!--&lt;!&ndash;                    <i class="icon-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-filter-list"></i>&ndash;&gt;-->
+                <!--&lt;!&ndash;                    <i class="icon-close-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>&ndash;&gt;-->
+                <!--&lt;!&ndash;                    Filter&ndash;&gt;-->
+                <!--                </div>-->
 
                 <div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">
                     <i class="icon-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-search"></i>
@@ -307,7 +307,7 @@
                 <div class="container">
                     <div class="bg0 p-t-60 p-b-30 p-lr-15-lg how-pos3-parent">
                         <button class="how-pos3 hov3 trans-04 js-hide-modal1"
-                                 onclick="hideProductModal(event,{{product.reference_id}});">
+                                onclick="hideProductModal(event,{{product.reference_id}});">
                             <img src="{% static 'website/images/icons/icon-close.png' %}" alt="CLOSE"/>
                         </button>
 
@@ -356,37 +356,37 @@
 
                                     <!--  -->
                                     <div class="p-t-33">
-                                        <div class="flex-w flex-r-m p-b-10">
-                                            <div class="size-203 flex-c-m respon6">Size</div>
+<!--                                        <div class="flex-w flex-r-m p-b-10">-->
+<!--                                            <div class="size-203 flex-c-m respon6">Size</div>-->
 
-                                            <div class="size-204 respon6-next">
-                                                <div class="rs1-select2 bor8 bg0">
-                                                    <select class="js-select2" name="time">
-                                                        <option>Choose an option</option>
-                                                        <option>Size S</option>
-                                                        <option>Size M</option>
-                                                        <option>Size L</option>
-                                                        <option>Size XL</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
-                                                </div>
-                                            </div>
-                                        </div>
+<!--                                            <div class="size-204 respon6-next">-->
+<!--                                                <div class="rs1-select2 bor8 bg0">-->
+<!--                                                    <select class="js-select2" name="time">-->
+<!--                                                        <option>Choose an option</option>-->
+<!--                                                        <option>Size S</option>-->
+<!--                                                        <option>Size M</option>-->
+<!--                                                        <option>Size L</option>-->
+<!--                                                        <option>Size XL</option>-->
+<!--                                                    </select>-->
+<!--                                                    <div class="dropDownSelect2"></div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
 
-                                        <div class="flex-w flex-r-m p-b-10">
-                                            <div class="size-203 flex-c-m respon6">Color</div>
+<!--                                        <div class="flex-w flex-r-m p-b-10">-->
+<!--                                            <div class="size-203 flex-c-m respon6">Color</div>-->
 
-                                            <div class="size-204 respon6-next">
-                                                <div class="rs1-select2 bor8 bg0">
-                                                    <select class="js-select2" name="time">
-                                                        <option>Choose an option</option>
-                                                        <option>Black</option>
-                                                        <option>White</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
-                                                </div>
-                                            </div>
-                                        </div>
+<!--                                            <div class="size-204 respon6-next">-->
+<!--                                                <div class="rs1-select2 bor8 bg0">-->
+<!--                                                    <select class="js-select2" name="time">-->
+<!--                                                        <option>Choose an option</option>-->
+<!--                                                        <option>Black</option>-->
+<!--                                                        <option>White</option>-->
+<!--                                                    </select>-->
+<!--                                                    <div class="dropDownSelect2"></div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
 
                                         <div class="flex-w flex-r-m p-b-10">
                                             <div class="size-204 flex-w flex-m respon6-next">
@@ -399,6 +399,7 @@
 
                                                     <input
                                                             class="mtext-104 cl3 txt-center num-product"
+                                                            id="num_product_{{product.reference_id}}"
                                                             type="number"
                                                             name="num-product"
                                                             value="1"
@@ -412,7 +413,8 @@
                                                 </div>
 
                                                 <button
-                                                        class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail addtocart" data-action="add"  data-product="{{product.reference_id}}"
+                                                        class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail addtocart"
+                                                        data-action="add" data-product="{{product.reference_id}}"
                                                 >
                                                     Add to cart
                                                 </button>
