--- a/raah/website/templates/product1.html
+++ b/raah/website/templates/product1.html
@@ -355,37 +355,37 @@
 
                                     <!--  -->
                                     <div class="p-t-33">
-                                        <div class="flex-w flex-r-m p-b-10">
-                                            <div class="size-203 flex-c-m respon6">Size</div>
+                                        <!--                                        <div class="flex-w flex-r-m p-b-10">-->
+                                        <!--                                            <div class="size-203 flex-c-m respon6">Size</div>-->
 
-                                            <div class="size-204 respon6-next">
-                                                <div class="rs1-select2 bor8 bg0">
-                                                    <select class="js-select2" name="time">
-                                                        <option>Choose an option</option>
-                                                        <option>Size S</option>
-                                                        <option>Size M</option>
-                                                        <option>Size L</option>
-                                                        <option>Size XL</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <!--                                            <div class="size-204 respon6-next">-->
+                                        <!--                                                <div class="rs1-select2 bor8 bg0">-->
+                                        <!--                                                    <select class="js-select2" name="time">-->
+                                        <!--                                                        <option>Choose an option</option>-->
+                                        <!--                                                        <option>Size S</option>-->
+                                        <!--                                                        <option>Size M</option>-->
+                                        <!--                                                        <option>Size L</option>-->
+                                        <!--                                                        <option>Size XL</option>-->
+                                        <!--                                                    </select>-->
+                                        <!--                                                    <div class="dropDownSelect2"></div>-->
+                                        <!--                                                </div>-->
+                                        <!--                                            </div>-->
+                                        <!--                                        </div>-->
 
-                                        <div class="flex-w flex-r-m p-b-10">
-                                            <div class="size-203 flex-c-m respon6">Color</div>
+                                        <!--                                        <div class="flex-w flex-r-m p-b-10">-->
+                                        <!--                                            <div class="size-203 flex-c-m respon6">Color</div>-->
 
-                                            <div class="size-204 respon6-next">
-                                                <div class="rs1-select2 bor8 bg0">
-                                                    <select class="js-select2" name="time">
-                                                        <option>Choose an option</option>
-                                                        <option>Black</option>
-                                                        <option>White</option>
-                                                    </select>
-                                                    <div class="dropDownSelect2"></div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <!--                                            <div class="size-204 respon6-next">-->
+                                        <!--                                                <div class="rs1-select2 bor8 bg0">-->
+                                        <!--                                                    <select class="js-select2" name="time">-->
+                                        <!--                                                        <option>Choose an option</option>-->
+                                        <!--                                                        <option>Black</option>-->
+                                        <!--                                                        <option>White</option>-->
+                                        <!--                                                    </select>-->
+                                        <!--                                                    <div class="dropDownSelect2"></div>-->
+                                        <!--                                                </div>-->
+                                        <!--                                            </div>-->
+                                        <!--                                        </div>-->
 
                                         <div class="flex-w flex-r-m p-b-10">
                                             <div class="size-204 flex-w flex-m respon6-next">
@@ -398,6 +398,7 @@
 
                                                     <input
                                                             class="mtext-104 cl3 txt-center num-product"
+                                                            id="num_product_{{product.reference_id}}"
                                                             type="number"
                                                             name="num-product"
                                                             value="1"
